fp-library/tests/ui/trampoline_requires_static.stderr
error[E0597]: `local` does not live long enough
  --> tests/ui/trampoline_requires_static.rs:8:18
   |
 7 |     let local = String::from("hello");
   |         ----- binding `local` declared here
 8 |     let reference = &local;
   |                     ^^^^^^ borrowed value does not live long enough
 9 |     let _trampoline = Trampoline::new(|| reference.len());
   |                       ----------------------------------- argument requires that `local` is borrowed for `'static`
10 | }
   | - `local` dropped here while still borrowed
   |
note: requirement that the value outlives `'static` introduced here
  --> src/types/trampoline.rs
   |
   |         pub fn new(f: impl FnOnce() -> A + 'static) -> Self {
   |                                            ^^^^^^^
